# runes-spark-bridge

./: Cargo.toml
btc_indexer/apps/main/: Cargo.toml
btc_indexer/crates/config_parser/: Cargo.toml
btc_indexer/crates/config_parser/src/: config.rs
btc_indexer/crates/indexer_internals/: Cargo.toml
btc_indexer/crates/indexer_internals/src/: error.rs  indexer.rs
btc_indexer/crates/indexer_internals/tests/: mock_testing.rs
btc_indexer/crates/local_db_store/: Cargo.toml
btc_indexer/crates/local_db_store/src/: init.rs
btc_indexer/crates/local_db_store/src/schemas/runes_spark/: btc_indexer_work_checkpoint.rs  user_request_stats.rs
btc_indexer/crates/server/: Cargo.toml
btc_indexer/crates/server/src/: error.rs  init.rs
btc_indexer/crates/server/src/routes/: track_tx.rs  track_wallet.rs
crates/btc_signer/: Cargo.toml  build.rs
crates/btc_signer/examples/: basic_example.rs  client_example.rs
crates/btc_signer/proto/: btc_signer.proto
crates/btc_signer/src/: aggregator.rs  errors.rs  grpc_server.rs  lib.rs  main.rs  multi_signer.rs  signer.rs  traits.rs  types.rs
crates/frost/: Cargo.toml
crates/frost/src/: aggregator.rs  config.rs  errors.rs  lib.rs  mocks.rs  signer.rs  traits.rs
crates/frost/tests/: general.rs
crates/global_utils/src/: common_types.rs  lib.rs
crates/persistent_storage/: Cargo.toml
crates/persistent_storage/src/: config.rs  error.rs  init.rs
gateway/crates/config_parser/: Cargo.toml
gateway/crates/flow_processor/: Cargo.toml
gateway/crates/flow_processor/src/: error.rs  flow_processor.rs  flow_router.rs  flow_sender.rs  init.rs  types.rs
gateway/crates/flow_processor/src/routes/: bridge_runes_flow.rs  btc_addr_issuing.rs  exit_spark_flow.rs  mod.rs
gateway/crates/local_db_store/: Cargo.toml
gateway/crates/local_db_store/src/: lib.rs
gateway/crates/local_db_store/src/schemas/: deposit_address.rs  user_state.rs
gateway/crates/local_db_store/tests/: general.rs
gateway/crates/server/src/: handlers.rs  init.rs
gateway/crates/server/src/handlers/: btc_addr_issuing.rs  get_runes_address.rs
gateway/crates/utils/: Cargo.toml
gateway/crates/utils/src/: aggregator.rs  lib.rs  signer_client.rs  tweak_generation.rs
verifier/: Cargo.toml
verifier/apps/main/: Cargo.toml
verifier/apps/main/src/: main.rs
verifier/crates/config_parser/: Cargo.toml
verifier/crates/config_parser/src/: config.rs  error.rs
verifier/crates/local_db_store/: Cargo.toml  example.env
verifier/crates/local_db_store/fixtures/: user_request_stats.sql
verifier/crates/local_db_store/migrations/: 20250829145634_init_all.down.sql  20250829145634_init_all.up.sql
verifier/crates/local_db_store/src/: error.rs  init.rs  lib.rs  schemas.rs  storage.rs
verifier/crates/local_db_store/src/schemas/: common.rs  runes_spark.rs  user_session_state.rs  user_state.rs
verifier/crates/local_db_store/src/schemas/runes_spark/: btc_indexer_work_checkpoint.rs  user_request_stats.rs
verifier/crates/local_db_store/tests/: btc_indexer_requests.rs  init_tests.rs  user_requests_tests.rs  user_state.rs  utils.rs
verifier/crates/server/: Cargo.toml
verifier/crates/server/src/: common.rs  error.rs  init.rs  lib.rs  routes.rs
verifier/crates/server/src/handlers/: dkg_round_1.rs  dkg_round_2.rs
verifier/crates/server/src/routes/: common.rs  create_partial_signature.rs  watch_runes_addr.rs  watch_spark_addr.rs
verifier/crates/server/src/routes/common/: api_result_request.rs
verifier/crates/server/tests/: test_tx_tracking.rs  test_wallet_tracking.rs
verifier/crates/server/tests/utils/: init.rs  mock.rs  mod.rs  test_notifier.rs
verifier/crates/utils/src/: frost_signer.rs
