[workspace]
resolver = "3"
members = [
    "btc_indexer/apps/*",
    "btc_indexer/crates/*",
    "crates/*",

    # spark-balance-checker
    "spark_balance_checker/crates/*",
    "spark_balance_checker/apps/*",

    "verifier/crates/*",
    "verifier/apps/*",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
authors = ["DistributedLabs"]
readme = "Readme.md"

[workspace.dependencies]
# global dependencies
anyhow = { version = "1.0.98" }
async-trait = { version = "0.1.88" }
axum = { version = "0.8.4", features = ["macros"] }
axum-test = { version = "18.0.0" }
bech32 = "0.11.0"
bitcoin = { version = "0.32.7" }
bitcoincore-rpc = { version = "0.19.0" }
btc_indexer = { path = "./btc_indexer/crates/btc_indexer" }
btc_indexer_internals = { path = "./btc_indexer/crates/indexer_internals" }
btc_indexer_server = { path = "./btc_indexer/crates/server", features = ["swagger"] }
config = { version = "0.15.13" }
indexer_config_parser = { path = "./btc_indexer/crates/config_parser" }
verifier_config_parser = { path = "./verifier/crates/config_parser" }
dns-lookup = { version = "3.0.0" }
dotenv = { version = "0.15.0" }
env_logger = "0.11.8"
global_utils = { path = "./crates/global_utils" }
hex = "0.4.3"
http = "1.3.1"
log = "0.4.27"
indexer_local_db_store = { path = "./btc_indexer/crates/local_db_store" }
verifier_local_db_store = { path = "./verifier/crates/local_db_store" }
mockall = { version = "0.13.1" }
ordinals = { version = "0.0.15" }
persistent_storage = { path = "./crates/persistent_storage" }
prost = "0.13.5"
prost-wkt = "0.6.1"
prost-wkt-build = "0.6.1"
prost-wkt-types = "0.6.1"
reqwest = { version = "0.12.23" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.143" , features = ["raw_value"]}
sqlx = { version = "0.8.6", features = ["json", "runtime-tokio", "postgres", "chrono", "json", "derive", "uuid", "macros"] }
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0.15"
titan-client = { version = "0.1.43" }
titan-types = { version = "0.1.28" }
tokio = { version = "1.45.0", features = ["full"] }
tokio-util = { version = "0.7.16" }
toml = "0.9.5"
tonic = { version = "0.12.3", features = ["tls-native-roots"] }
tonic-build = { version = "0.12.3", features = ["prost"] }
tracing = { version = "0.1.41", features = [] }
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5.6", features = ["serde"] }
utoipa = { version = "5.4.0" }
utoipa-swagger-ui = { version = "9.0.2" }
uuid = { version = "1.18.0", features = ["serde", "v4"] }


# global crates/* dependencies
spark-protos = { path = "./crates/spark-protos-rpc" }
spark-client = { path = "./crates/spark_client" }

# spark-balance-checker crates/* dependencies
spark-balance-checker-common = { path = "./spark_balance_checker/crates/common" }
spark-balance-checker-server = { path = "./spark_balance_checker/crates/server" }

# spark-balance-checker apps/* dependencies
spark-balance-checker-main = { path = "./spark_balance_checker/apps/main" }
