[workspace]
resolver = "3"
members = [
    # global
    "crates/*",

    # verifier
    "verifier/crates/*",
    "verifier/apps/*",
    # gateway
    "gateway/crates/*",
    "gateway/apps/*",

    # spark-balance-checker
    "spark_balance_checker/crates/*",
    "spark_balance_checker/apps/*",

    # btc indexer
    "btc_indexer/apps/*",
    "btc_indexer/crates/*",

]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
authors = ["DistributedLabs"]
readme = "Readme.md"

[workspace.dependencies]
####### Global Dependencies #######
anyhow = { version = "1.0.98" }
async-trait = { version = "0.1.88" }
axum = { version = "0.8.4", features = ["macros"] }
axum-test = { version = "18.0.0" }
bech32 = "0.11.0"
bitcoin = { version = "0.32.7", features = ["rand", "serde"] }
bitcoincore-rpc = { version = "0.19.0" }
config = { version = "0.15.13" }
dns-lookup = { version = "3.0.0" }
dotenv = { version = "0.15.0" }
env_logger = "0.11.8"
eyre = { version = "0.6.12" }
frost-secp256k1-tr = { version = "2.2.0" }
futures = { version = "0.3.31" }
hex = "0.4.3"
http = "1.3.1"
log = { version = "0.4.27" }
mockall = { version = "0.13.1" }
ordinals = { version = "0.0.15" }
prost = "0.13.5"
prost-wkt = "0.6.1"
prost-wkt-build = "0.6.1"
prost-wkt-types = "0.6.1"
rand_core = { version = "0.6.4", features = ["getrandom"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.143", features = ["raw_value"] }
sqlx = { version = "0.8.6", features = ["json", "runtime-tokio", "postgres", "chrono", "json", "derive", "uuid", "macros", "migrate"] }
strum = { version = "0.27", features = ["derive"] }
thiserror = { version = "2.0.16" }
titan-client = { version = "0.1.43" }
titan-types = { version = "0.1.28" }
tokio = { version = "1.45.0", features = ["full"] }
tokio-util = { version = "0.7.16" }
toml = { version = "0.9.5" }
tonic = { version = "0.12.3", features = ["tls-native-roots"] }
tonic-build = { version = "0.12.3", features = ["prost"] }
tracing = { version = "0.1.41", features = [] }
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5.6", features = ["serde"] }
utoipa = { version = "5.4.0" }
utoipa-swagger-ui = { version = "9.0.2" }
uuid = { version = "1.18.0", features = ["serde", "v4"] }


####### Global Crates #######
global_utils = { path = "./crates/global_utils" }
spark-protos = { path = "./crates/spark-protos-rpc" }
spark_client = { path = "./crates/spark_client" }
persistent_storage = { path = "./crates/persistent_storage" }
frost = { path = "./crates/frost" }


####### Verifier #######
# Verifier crates
verifier_local_db_store = { path = "./verifier/crates/local_db_store" }
verifier_server = { path = "./verifier/crates/server" }
verifier_config_parser = { path = "./verifier/crates/config_parser" }
verifier_utils = { path = "./verifier/crates/utils" }

# Verifier apps
verifier_main = { path = "verifier/apps/main" }


####### Gateway #######
# Gateway crates
gateway_server = { path = "gateway/crates/server" }
gateway_config_parser = { path = "gateway/crates/config_parser" }
gateway_local_db_store = { path = "gateway/crates/local_db_store" }
gateway_flow_processor = { path = "gateway/crates/flow_processor" }
gateway_utils = { path = "gateway/crates/utils" }

# Gateway apps
gateway_main = { path = "gateway/apps/main" }


####### Spark Balance Checker #######
# Spark balance checker crates
spark_balance_checker_config_parser = { path = "./spark_balance_checker/crates/config_parser" }
spark_balance_checker_server = { path = "./spark_balance_checker/crates/server" }

# Spark balance checker apps
spark_balance_checker_main = { path = "./spark_balance_checker/apps/main" }


####### Btc Indexer #######
# Btc indexer crates
btc_indexer = { path = "./btc_indexer/crates/btc_indexer" }
btc_indexer_internals = { path = "./btc_indexer/crates/indexer_internals" }
local_db_store_indexer = { path = "./btc_indexer/crates/local_db_store" }
btc_indexer_server = { path = "./btc_indexer/crates/server", features = ["swagger"] }
config_parser = { path = "./btc_indexer/crates/config_parser" }
