[package]
name = "btc-signer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Cryptography
secp256k1 = { version = "0.28", features = ["rand", "recovery", "global-context", "rand-std"] }
rand = "0.8"
sha2 = "0.10"

# Protobuf and gRPC
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.18.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "btc-signer"
path = "src/main.rs"

[lib]
name = "btc_signer"
path = "src/lib.rs"