[package]
name = "frost"
edition = "2024"

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
frost-secp256k1-tr = { workspace = true }
async-trait = { workspace = true }
rand_core = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }

bitcoin = { workspace = true, features = ["serde"] }