[package]
name = "persistent_storage"
edition = "2024"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
async-trait = { workspace = true }
bitcoin = { workspace = true }
indexer_config_parser = { workspace = true }
global_utils = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
dotenv = { workspace = true }
tokio = { workspace = true }
global_utils = { workspace = true }
