[package]
name = "gateway_flow_processor"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
global_utils = { workspace = true }
gateway_utils = { workspace = true }
persistent_storage = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
frost = { workspace = true }
bitcoin = { workspace = true }
gateway_local_db_store = { workspace = true }
frost-secp256k1-tr = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
lrc20 = { workspace = true }
