[package]
name = "gateway_local_db_store"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
bitcoin = { workspace = true }
chrono = { workspace = true }
frost = { workspace = true }
global_utils = { workspace = true }
persistent_storage = { workspace = true }
serde = { workspace = true  }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
gateway_utils = { workspace = true }


[dev-dependencies]
anyhow = { workspace = true }
global_utils = { workspace = true }
lrc20 = { workspace = true }
frost-secp256k1-tr = { workspace = true }
