[package]
name = "gateway_utils"
edition = "2024"

[dependencies]
frost = { workspace = true }
gateway_config_parser = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
frost-secp256k1-tr = { workspace = true }
thiserror = { workspace = true }
bitcoin = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }

