[package]
name = "verifier_config_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcoincore-rpc = { workspace = true }
config = { workspace = true }
dotenv = { workspace = true }
global_utils = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
