[package]
name = "verifier_local_db_store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
global_utils = { workspace = true }
persistent_storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
[dev-dependencies]
bitcoin = { workspace = true }
dotenv = { workspace = true }
tokio = { workspace = true }
