[package]
name = "verifier_local_db_store"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
bitcoin = { workspace = true }
frost = { workspace = true }
global_utils = { workspace = true }
persistent_storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
dotenv = { workspace = true }
frost-secp256k1-tr = { workspace = true }
